4

* logcollect.py now defaults to http://olpc.scheffers.net/olpc/submit.tcl
* Fix command-line mode and cleanup 'usage' after rename from log-collect.py
* Default text font size

3

* Read check permission

2

* Drop presence and network

1

* Initial Version